--- a/visualizations/humidity.html
+++ b/visualizations/humidity.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <!-- CSS Link-->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 
 </head>
 <body id="humidity">
     <!-- Navigation Section -->
     <div class="navigation">      
       <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="index.html">Latitude</a>            
+        <a class="navbar-brand" href="../index.html">Latitude</a>            
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
            aria-controls="navbarNavDropdown" aria-expanded="true" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -28,17 +28,17 @@
                  Plots
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="visualizations/maxTemp.html">Max Temperature</a>
-                <a class="dropdown-item" href="visualizations/humidity.html">Humidity</a>
-                <a class="dropdown-item" href="visualizations/cloudiness.html">Cloudiness</a>
-                <a class="dropdown-item" href="visualizations/windSpeed.html">Wind Speed</a>
+                <a class="dropdown-item" href="./maxTemp.html">Max Temperature</a>
+                <a class="dropdown-item" href="./humidity.html">Humidity</a>
+                <a class="dropdown-item" href="./cloudiness.html">Cloudiness</a>
+                <a class="dropdown-item" href="./windSpeed.html">Wind Speed</a>
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="comparison.html">Comparison</a>
+              <a class="nav-link" href="../comparison.html">Comparison</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="data.html">Data</a>
+              <a class="nav-link" href="../data.html">Data</a>
             </li>
           </ul>
         </div>            
@@ -52,7 +52,7 @@
         <div class="box" style="padding-bottom: 5px;">
           <h3 class="title">Humidity</h3>
           <hr>
-          <img src="Resources/assets/images/Fig2.png" alt="Humidity Graph">
+          <img src="../assets/images/Lat_vs_Humidity.png" alt="Humidity Graph">
           <p>
             Humidity does not show a strong correlation to latitude. There is 
             no discernable trend between the two.  
@@ -66,25 +66,25 @@
           <div class="container">
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
-                <a href="maxTemp.html">
-                  <img class="panel" src="Resources/assets/images/Fig1.png" alt="Max Temperature Graph">
+                <a href="./maxTemp.html">
+                  <img class="panel" src="../assets/images/Lat_vs_MaxTemp.png" alt="Max Temperature Graph">
                 </a>
               </div>
               <div class="col-6">
-                <a href="humidity.html">
-                  <img class="panel" src="Resources/assets/images/Fig2.png" alt="Humidity Graph">
+                <a href="./humidity.html">
+                  <img class="panel" src="../assets/images/Lat_vs_Humidity.png" alt="Humidity Graph">
                 </a>
               </div>
             </div>
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
-                <a href="cloudiness.html">
-                  <img class="panel" src="Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
+                <a href="./cloudiness.html">
+                  <img class="panel" src="../assets/images/Lat_vs_Cloudiness.png" alt="Cloudiness Graph">
                 </a>
               </div>
               <div class="col-6">
-                <a href="windSpeed.html">
-                  <img class="panel" src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
+                <a href="./windSpeed.html">
+                  <img class="panel" src="../assets/images/Lat_vs_Windspeed.png" alt="Wind Speed Graph">
                 </a>
               </div>          
             </div>
