--- a/comparison.html
+++ b/comparison.html
@@ -55,13 +55,13 @@
             <p>Click any graph for more information.</p>
             <div class="container" style="padding-bottom: 40px;">
               <div class="row" >
-                <div class="col-6" style="padding: 30px;">
+                <div class="col-md-6 col-sm-12" style="padding: 30px;">
                   <div class="title">Max Temperature</div>
                   <a href="visualizations/maxTemp.html">
                     <img class="panel" src="assets/images/Lat_vs_MaxTemp.png" alt="Max Temperature Graph">
                   </a>
                 </div>
-                <div class="col-6" style="padding: 30px;">
+                <div class="col-md-6 col-sm-12" style="padding: 30px;">
                   <div class="title">Humidity</div>
                   <a href="visualizations/humidity.html">
                     <img class="panel" src="assets/images/Lat_vs_Humidity.png" alt="Humidity Graph">
@@ -69,13 +69,13 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-6" style="padding: 30px;">
+                <div class="col-md-6 col-sm-12" style="padding: 30px;">
                   <div class="title">Cloudiness</div>
                   <a href="visualizations/cloudiness.html">
                     <img class="panel" src="assets/images/Lat_vs_Cloudiness.png" alt="Cloudiness Graph">
                   </a>
                 </div>
-                <div class="col-6" style="padding: 30px;">
+                <div class="col-md-6 col-sm-12" style="padding: 30px;">
                   <div class="title">Wind Speed</div>
                   <a href="visualizations/windSpeed.html">
                     <img class="panel" src="assets/images/Lat_vs_Windspeed.png" alt="Wind Speed Graph">
